--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,11 +10,11 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group" appDropdown>
       <button class="btn btn-primary dropdown-toggle" type="button">Manage recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#"></a>To Shopping List</li>
-        <li><a href="#"></a>Edit recipe</li>
+        <li><a href="#">To Shopping List</a></li>
+        <li><a href="#">Edit recipe</a></li>
         <li><a href="#">Delete recipe</a></li>
       </ul>
     </div>
