--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,7 +13,7 @@
     <div class="btn-group" appDropdown>
       <button class="btn btn-primary dropdown-toggle" type="button">Manage recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
+        <li><a (click)="addToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
         <li><a href="#">Edit recipe</a></li>
         <li><a href="#">Delete recipe</a></li>
       </ul>
