--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,7 +6,10 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe" (selectRecipe)="onSelectRecipe($event)"></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of recipes; let i = index"
+                     [recipe]="recipe"
+                     [index] ="i"
+    ></app-recipe-item>
   </div>
 
 </div>
