--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,7 +14,7 @@
       <button class="btn btn-primary dropdown-toggle" type="button">Manage recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
         <li><a (click)="addToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
-        <li><a style="cursor: pointer">Edit recipe</a></li>
+        <li><a [routerLink]="['edit']" style="cursor: pointer">Edit recipe</a></li>
         <li><a style="cursor: pointer">Delete recipe</a></li>
       </ul>
     </div>
