--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,19 +1,26 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onAdd(shoppingListForm)" #shoppingListForm="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameRef>
+          <input type="text" id="name" class="form-control"
+                 name="name"
+                 ngModel
+                 required>
         </div>
         <div class="col-sm-2 form-group">
           <label for="name">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountRef>
+          <input type="number" id="amount" class="form-control"
+                 name="amount"
+                 ngModel
+                 required
+          [min]="1">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="onAdd()">Add</button>
+          <button class="btn btn-success" type="submit" [disabled]="!shoppingListForm.valid">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
