--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,55 +1,56 @@
 <div class="row">
   <div class="col-xs-12">
-    <div class="row">
-      <div class="col-xs-12">
-        <button class="btn btn-success" type="submit">Save</button>
-        <button class="btn btn-danger" type="button">Cancel</button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" id="name" class="form-control">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="submit">Save</button>
+          <button class="btn btn-danger" type="button">Cancel</button>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="form-group">
-          <label for="imgPath">Img URL</label>
-          <input type="text" id="imgPath" class="form-control">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="form-group">
-          <label for="description">Description</label>
-          <textarea type="text" id="description" class="form-control" rows="6"></textarea>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="row">
-          <div class="col-xs-8">
-            <input type="text" class="form-control">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" class="form-control" formControlName="name">
           </div>
-          <div class="col-xs-2">
-            <input type="number" class="form-control">
-          </div>
-          <div class="col-xs-2">
-            <button type="button" class="btn btn-danger">X</button>
-          </div>
-
         </div>
       </div>
-    </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imgPath">Img URL</label>
+            <input type="text" id="imgPath" class="form-control" formControlName="imgPath">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <img src="" alt="" class="img-responsive">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea type="text" id="description" class="form-control" rows="6" formControlName="description"></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="row">
+            <div class="col-xs-8">
+              <input type="text" class="form-control">
+            </div>
+            <div class="col-xs-2">
+              <input type="number" class="form-control">
+            </div>
+            <div class="col-xs-2">
+              <button type="button" class="btn btn-danger">X</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
