--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">Save</button>
+          <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
           <button class="btn btn-danger" type="button">Cancel</button>
         </div>
       </div>
@@ -37,16 +37,22 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div class="row" style="margin-top: 10px" *ngFor="let ingCtrl of controls; let i = index" [formGroupName]="i">
             <div class="col-xs-8">
-              <input type="text" class="form-control">
+              <input type="text" class="form-control" formControlName="name">
             </div>
             <div class="col-xs-2">
-              <input type="number" class="form-control">
+              <input type="number" class="form-control" formControlName="amount">
             </div>
             <div class="col-xs-2">
               <button type="button" class="btn btn-danger">X</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button class="btn btn-success" type="button" (click)="onAddIngredient()">Add ingredient</button>
             </div>
           </div>
         </div>
