--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,7 @@
       <ul class="dropdown-menu">
         <li><a (click)="addToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
         <li><a [routerLink]="['edit']" style="cursor: pointer">Edit recipe</a></li>
-        <li><a style="cursor: pointer">Delete recipe</a></li>
+        <li><a (click)="deleteRecipe()" style="cursor: pointer">Delete recipe</a></li>
       </ul>
     </div>
   </div>
