--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-xs-12">
           <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
-          <button class="btn btn-danger" type="button">Cancel</button>
+          <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
         </div>
       </div>
       <div class="row">
@@ -19,7 +19,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imgPath">Img URL</label>
-            <input type="text" id="imgPath" class="form-control" formControlName="imgPath">
+            <input type="text" id="imgPath" class="form-control" formControlName="imagePath">
           </div>
         </div>
       </div>
