--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -19,13 +19,13 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imgPath">Img URL</label>
-            <input type="text" id="imgPath" class="form-control" formControlName="imagePath">
+            <input type="text" id="imgPath" class="form-control" formControlName="imagePath" #imgPath>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" alt="" class="img-responsive">
+          <img [src]="imgPath.value" alt="" class="img-responsive">
         </div>
       </div>
       <div class="row">
