--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
               <a style="cursor: pointer" (click)="onSaveData()">Save data</a>
             </li>
             <li>
-              <a style="cursor: pointer">Fetch data</a>
+              <a style="cursor: pointer" (click)="onFetchData()">Fetch data</a>
             </li>
           </ul>
         </li>
